package protocol;

message TransferName {
        required bytes public_key = 1;
        required bytes name = 2;
}

message C2SMessage {
	optional bytes transfer_name = 1;
	optional bytes lookup = 2;
}

message LookupResponse {
	required bytes root = 1;
	required bytes path = 2;
	required bytes public_key = 3;
}
